fix guilds spacing

--- a/main.css
+++ b/main.css
@@ -349,6 +349,10 @@ margin-bottom: 10px;
   margin-right: 0;
 }
 
+.guilds.twelve-column-grid {
+  grid-auto-rows: minmax(10px, auto);
+}
+
 .requirements-text-styling {
   font-size: 12px;
 }
@@ -429,9 +433,6 @@ hr {
     grid-column: 1/13;
 }
 
-.alliances-section-components {
-
-}
 
 .alliances {
   height: 385px;
